--- a/plugin.xml
+++ b/plugin.xml
@@ -47,7 +47,7 @@
             <preference name="android-minSdkVersion" value="15" />
         </config-file>
 
-        <source-file src="src/android/facebookconnect.xml" target-dir="res/values" />
+        <source-file src="src/android/facebookconnect.xml" target-dir="app/src/main/res/values" />
         <config-file target="app/src/main/res/values/facebookconnect.xml" parent="/*">
             <string name="fb_app_id">$APP_ID</string>
             <string name="fb_app_name">$APP_NAME</string>
